; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_freebsd.c_uv_get_total_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_freebsd.c_uv_get_total_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CTL_HW = common dso_local global i32 0, align 4
@HW_PHYSMEM = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_get_total_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca [2 x i32], align 4
  %4 = alloca i64, align 8
  %5 = getelementptr inbounds [2 x i32], [2 x i32]* %3, i64 0, i64 0
  %6 = load i32, i32* @CTL_HW, align 4
  store i32 %6, i32* %5, align 4
  %7 = getelementptr inbounds i32, i32* %5, i64 1
  %8 = load i32, i32* @HW_PHYSMEM, align 4
  store i32 %8, i32* %7, align 4
  store i64 8, i64* %4, align 8
  %9 = getelementptr inbounds [2 x i32], [2 x i32]* %3, i64 0, i64 0
  %10 = call i64 @sysctl(i32* %9, i32 2, i64* %2, i64* %4, i32* null, i32 0)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %0
  %13 = load i32, i32* @errno, align 4
  %14 = call i32 @UV__ERR(i32 %13)
  store i32 %14, i32* %1, align 4
  br label %18

15:                                               ; preds = %0
  %16 = load i64, i64* %2, align 8
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %1, align 4
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i64 @sysctl(i32*, i32, i64*, i64*, i32*, i32) #1

declare dso_local i32 @UV__ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
